Style fixes (#176)
* remove playground menu item on mobile

* fix mobile menu width

* add a max-width on content

* align to left dojo logo on mobile, rather than the weird off-center

--- a/src/header/Header.m.css
+++ b/src/header/Header.m.css
@@ -87,7 +87,6 @@
 
 .homeLink {
 	display: flex;
-	justify-content: center;
 	height: 100%;
 }
 
@@ -186,7 +185,7 @@
 		left: -100vw;
 		top: var(--header-size);
 		height: 100%;
-		width: 100vw;
+		width: 100%;
 		overflow-x: visible;
 		transition: left 0.3s ease, box-shadow 0.3s ease;
 		z-index: 999;
@@ -266,6 +265,10 @@
 
 	.link:hover {
 		color: var(--color-light-gray);
+	}
+
+	.playgroundMenuItem {
+		display: none;
 	}
 }
 
