--- a/src/learn/Learn.m.css
+++ b/src/learn/Learn.m.css
@@ -67,6 +67,7 @@
 	margin-left: 20px;
 	margin-bottom: 20px;
 	min-width: 300px;
+	max-width: 900px;
 }
 
 .menu {
